# Bigbird-Enformer

./: .gitignore  README.md  pyproject.toml
configs/: ccre_bigbird.yaml
notebooks/: transformer_attention_speed_benchmark.ipynb
scripts/: evaluate.py  gtex_finetune.py
src/: train.py  train_lightning.py
src/bigbird_enformer/: __init__.py  train_lightning.py
src/bigbird_enformer/layers/: __init__.py  attention.py
src/bigbird_enformer/models/: __init__.py  enformer_plus.py
src/bigbird_enformer/utils/: __init__.py  ccre_mask_check.py  ccre_preprocess.py  config.py  data.py  gtex_dataset.py
src/layers/: attention.py  attention_legacy.py
src/models/: enformer_plus.py
src/tests/: evaluate.py  gtex_finetune.py  test_model.py
src/utils/: ccre_mask_check.py  ccre_preprocess.py  config.py  data.py  gtex_dataset.py
tests/: conftest.py  test_attention.py  test_ccre_preprocess.py  test_config.py  test_data_utils.py  test_datasets.py  test_gpu_smoke.py  test_model.py  test_training_utils.py
